// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto api should return failure for array 1`] = `
Object {
  "error": Object {
    "message": "base parameter must be of type string",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute crypto api should return success 1`] = `
Object {
  "data": Object {
    "result": 1276.75,
  },
  "result": 1276.75,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute marketcap api should return success 1`] = `
Object {
  "data": Object {
    "result": 156240830222.34824,
  },
  "result": 156240830222.34824,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute volume api should return success 1`] = `
Object {
  "data": Object {
    "result": 735584356.0525743,
  },
  "result": 735584356.0525743,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute vwap api should return success 1`] = `
Object {
  "data": Object {
    "result": 0.9224,
  },
  "result": 0.9224,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;
